1. Collection API Улучшения[#94137]